--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "~TODO~",
+  "name": "ABTL-EOP",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -8,14 +8,21 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.12",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.0-next.117",
     "autoprefixer": "^10.2.5",
+    "bcrypt": "^5.0.1",
     "cssnano": "^5.0.1",
     "flickity": "^2.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.9",
     "postcss": "^8.2.10",
     "postcss-load-config": "^3.0.1",
     "svelte": "^3.34.0",
+    "svelte-hero-icons": "^2.2.0",
+    "svelte-multiselect": "^1.1.8",
     "svelte-preprocess": "^4.7.1",
+    "svelte-select": "^4.2.2",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.1.1"
   },
   "type": "module"
