--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.35",
     "@sveltejs/adapter-static": "^1.0.0-next.12",
     "@sveltejs/kit": "^1.0.0-next.117",
     "autoprefixer": "^10.2.5",
+    "aws-sdk": "^2.949.0",
     "bcrypt": "^5.0.1",
     "cssnano": "^5.0.1",
     "flickity": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
+    "mock-aws-s3": "^4.0.2",
     "mongodb": "^3.6.9",
+    "mongodb-client-encryption": "^1.2.6",
+    "nock": "^13.1.1",
     "postcss": "^8.2.10",
     "postcss-load-config": "^3.0.1",
     "svelte": "^3.34.0",
@@ -23,7 +28,7 @@
     "svelte-preprocess": "^4.7.1",
     "svelte-select": "^4.2.2",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.2.4"
   },
   "type": "module"
 }
