--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ABTL-EOP",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview"
+    "dev": "svelte-kit dev",
+    "preview": "svelte-kit preview",
+    "start": "node build"
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.35",
