--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "build": "svelte-kit build",
-    "dev": "svelte-kit dev",
-    "preview": "svelte-kit preview",
+    "dev": "svelte-kit dev --host",
+    "preview": "svelte-kit preview --host",
     "start": "node build"
   },
   "devDependencies": {
@@ -14,7 +14,9 @@
     "autoprefixer": "^10.2.5",
     "aws-sdk": "^2.949.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cssnano": "^5.0.1",
+    "esbuild": "^0.12.15",
     "flickity": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
     "mock-aws-s3": "^4.0.2",
@@ -31,5 +33,6 @@
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {}
 }
