--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node build"
   },
   "devDependencies": {
+    "@imask/svelte": "^6.2.0",
     "@sveltejs/adapter-node": "^1.0.0-next.35",
     "@sveltejs/adapter-static": "^1.0.0-next.12",
     "@sveltejs/kit": "^1.0.0-next.123",
@@ -19,11 +20,13 @@
     "flickity": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
     "mock-aws-s3": "^4.0.2",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "mongodb-client-encryption": "^1.2.6",
     "nock": "^13.1.1",
     "postcss": "^8.2.10",
     "postcss-load-config": "^3.0.1",
+    "random-words": "^1.1.1",
     "svelte": "^3.34.0",
     "svelte-hero-icons": "^2.2.0",
     "svelte-multiselect": "^1.1.8",
