--- a/package.json
+++ b/package.json
@@ -18,22 +18,27 @@
     "cssnano": "^5.0.1",
     "esbuild": "^0.12.15",
     "flickity": "^2.2.2",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mock-aws-s3": "^4.0.2",
     "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "mongodb-client-encryption": "^1.2.6",
     "nock": "^13.1.1",
+    "nodemailer": "^6.6.3",
     "postcss": "^8.2.10",
     "postcss-load-config": "^3.0.1",
+    "provinces-ca": "^1.0.0",
     "random-words": "^1.1.1",
+    "states-us": "^1.0.1",
     "svelte": "^3.34.0",
     "svelte-hero-icons": "^2.2.0",
     "svelte-multiselect": "^1.1.8",
     "svelte-preprocess": "^4.7.1",
     "svelte-select": "^4.2.2",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "zipcodes": "^8.0.0"
   },
   "type": "module",
   "dependencies": {}
