--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "aws-sdk": "^2.949.0",
     "bcryptjs": "^2.4.3",
     "cssnano": "^5.0.1",
+    "deepmerge": "^4.2.2",
     "esbuild": "^0.12.15",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "flickity": "^2.2.2",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
@@ -38,8 +41,8 @@
     "svelte-select": "^4.2.2",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.4",
+    "xlsx": "^0.17.2",
     "zipcodes": "^8.0.0"
   },
-  "type": "module",
-  "dependencies": {}
+  "type": "module"
 }
