fix - update theme-color for PWA

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "background_color": "#121319",
-  "theme_color": "#121319",
+  "background_color": "#1e2029",
+  "theme_color": "#1e2029",
   "name": "Employee Online Portal - Allen-Bailey Tag & Label",
   "short_name": "EOP",
   "display": "standalone",
