--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
 		"socket.io": "^4.4.1",
 		"socket.io-client": "^4.4.1",
 		"svelte": "^3.44.0",
+		"svelte-hero-icons": "^4.1.0",
 		"svelte-preprocess": "^4.10.1",
+		"tailwind-merge": "^1.2.0",
 		"tailwindcss": "^3.0.12",
 		"vite-plugin-socket-io": "^1.0.2"
 	},
