--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
 		"svelte": "^3.44.0",
 		"svelte-preprocess": "^4.10.1",
 		"sveltewind": "^1.0.2",
-		"tailwind-merge": "^1.2.0",
 		"tailwindcss": "^3.0.12",
 		"vite-plugin-socket-io": "^1.0.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"tailwind-merge": "^1.2.0"
+	}
 }
