--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "express": "^4.17.3",
     "postcss": "^8.4.5",
     "postcss-load-config": "^3.1.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "socket.io": "^4.4.1",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.10.1",
     "sveltewind": "^1.0.2",
