[ADD] dark-mode & light-mode theme colors

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "background_color": "#1e2029",
-  "theme_color": "#1e2029",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "name": "Employee Online Portal - Allen-Bailey Tag & Label",
   "short_name": "EOP",
   "display": "standalone",
