--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "cssnano": "^5.0.1",
     "deepmerge": "^4.2.2",
+    "dotenv": "^16.0.1",
     "esbuild": "^0.12.15",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
