--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 VITE_BASE_URL=""
 VITE_JWT_SECRET=""
 VITE_MONGO_DB=""
+NODEMAILER_PASSWORD=""
 UPS_ACCESSLICENSE_NUMBER=""
 UPS_PASSWORD=""
 UPS_TRANSID=""
