--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@bobthered/tailwindcss-palette-generator": "^3.0.0",
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-node": "^1.0.0-next.88",
     "@sveltejs/kit": "next",
     "@sveltejs/package": "next",
     "autoprefixer": "^10.4.7",
@@ -25,6 +26,8 @@
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.10.7",
     "sveltewind": "^1.4.1",
@@ -32,7 +35,8 @@
     "tailwindcss": "^3.1.5",
     "tslib": "^2.3.1",
     "typescript": "^4.8.2",
-    "vite": "^3.1.0-beta.1"
+    "vite": "^3.1.0-beta.1",
+    "vite-plugin-socket-io": "^1.0.2"
   },
   "type": "module"
 }
