--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "preview": "vite preview --host --port 3000",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --plugin-search-dir . --write .",
+    "start": "node ./server"
   },
   "devDependencies": {
     "@bobthered/tailwindcss-palette-generator": "^3.0.0",
@@ -15,7 +16,6 @@
     "@sveltejs/kit": "next",
     "@sveltejs/package": "next",
     "autoprefixer": "^10.4.7",
-    "bcrypt": "^5.0.1",
     "cookie": "^0.5.0",
     "dotenv": "^16.0.2",
     "eslint": "^8.16.0",
