--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/package": "next",
     "autoprefixer": "^10.4.7",
     "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
