--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "background_color": "#242424",
-  "theme_color": "#242424",
+  "background_color": "#161A22",
+  "theme_color": "#161A22",
   "name": "EOP - Allen-Bailey Tag & Label",
   "short_name": "EOP",
   "display": "standalone",
