feat: add ups/new-quote route

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 JWT_SECRET=
-DB_ADAPTER=mongodb
-MONGODB_CONNECTION_STRING=mongodb+srv://bobmcaleavey:<password>@cluster0.0f8ym.mongodb.net/?retryWrites=true&w=majority
-MONGODB_DB=development
+DB_ADAPTER=
+MONGODB_CONNECTION_STRING=
+MONGODB_DB=
 MONGODB_PASSWORD=
+UPS_ACCESSLICENSE_NUMBER=
+UPS_PASSWORD=
+UPS_RATING_ENDPOINT=
+UPS_TRANSID=
+UPS_TRANSACTIONSRC=
+UPS_USERNAME=
+UPS_VALIDATION_ENDPOINT=
