--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.8.2",
     "vite": "^3.1.0-beta.1",
-    "vite-plugin-socket-io": "^1.0.2"
+    "vite-plugin-socket-io": "^1.0.2",
+    "zipcodes": "^8.0.0"
   },
   "type": "module",
   "dependencies": {
