feat: add fileGeneration library

--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@sveltejs/kit": "next",
     "@sveltejs/package": "next",
     "autoprefixer": "^10.4.7",
+    "buffer": "^6.0.3",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "downloadjs": "^1.4.7",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.1",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
