--- a/package.json
+++ b/package.json
@@ -12,25 +12,34 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"prisma:migrate": "rimraf prisma/migrations && npx prisma migrate dev --name init"
 	},
 	"devDependencies": {
 		"@bobthered/tailwindcss-palette-generator": "^3.1.1",
 		"@playwright/test": "^1.28.1",
+		"@prisma/client": "^5.4.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
+		"bcryptjs": "^2.4.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"exceljs": "^4.3.0",
+		"file-saver": "^2.0.5",
+		"jsonwebtoken": "^9.0.2",
+		"luxon": "^3.4.3",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"prisma": "^5.4.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
