--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltewind": "^1.8.5",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
