--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite dev --host --port 3005",
+    "dev": "npx prisma db push && vite dev --host --port 3005",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -13,17 +13,24 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@prisma/client": "^5.7.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.27.4",
+    "@types/bcryptjs": "^2.4.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
+    "bcryptjs": "^2.4.3",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "luxon": "^3.4.4",
+    "mongodb": "^6.3.0",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.7.0",
+    "standard-version": "^9.5.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "sveltewind": "^1.8.5",
