--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "standard-version": "^9.5.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "sveltekit-superforms": "^1.11.0",
     "sveltewind": "^1.8.5",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
-    "vitest": "^0.34.0"
+    "vitest": "^0.34.0",
+    "zod": "^3.22.4"
   },
   "type": "module"
 }
