--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@prisma/client": "^5.7.0",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-vercel": "^3.1.0",
     "@sveltejs/kit": "^1.27.4",
     "@types/bcryptjs": "^2.4.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
