--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "npm run prisma:generate && npm run prisma:db:push && vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -11,9 +11,13 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run"
+		"test": "npm run test:unit -- --run",
+		"prisma:generate": "prisma generate",
+		"prisma:db:push": "npx prisma db push",
+		"postinstall": "npm run prisma:generate"
 	},
 	"devDependencies": {
+		"@prisma/client": "^5.21.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -21,8 +25,10 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"@types/bcryptjs": "^2.4.6",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
+		"bcryptjs": "^2.4.3",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -30,6 +36,7 @@
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
+		"prisma": "^5.21.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"sveltewind": "^3.0.0",
