--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"sveltewind": "^3.0.0",
+		"tailwind-merge": "^2.5.4",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
