--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/eslint": "^9.6.0",
+		"@types/luxon": "^3.4.2",
 		"autoprefixer": "^10.4.20",
 		"bcryptjs": "^2.4.3",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"luxon": "^3.5.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
