--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"devDependencies": {
 		"@prisma/client": "^5.21.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-vercel": "^5.5.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
