--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
 		"bcrypt": "^6.0.0",
 		"drizzle-kit": "^0.30.2",
