--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"@testing-library/svelte": "^5.2.4",
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
-		"bcrypt": "^6.0.0",
+		"bcryptjs": "^3.0.2",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
