feat: test UPS Address Validation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-# Replace with your DB credentials!
-DATABASE_URL="postgres://user:password@host:port/db-name"
+MONGODB_URL=
+DATABASE_URL=
+UPS_ACCESSLICENSE_NUMBER=
+UPS_CLIENT_ID=
+UPS_CLIENT_SECRET=
+UPS_PASSWORD=
+UPS_TRANSACTIONSRC=
+UPS_TRANSID=
+UPS_USERNAME=
