--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@testing-library/svelte": "^5.2.4",
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
+		"@types/zipcodes": "^8.0.5",
 		"bcryptjs": "^3.0.2",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
@@ -41,6 +42,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"states-us": "^1.1.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwind-merge": "^3.3.1",
@@ -48,7 +50,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
-		"vitest": "^3.2.3"
+		"vitest": "^3.2.3",
+		"zipcodes": "^8.0.0"
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
