--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"mdsvex": "^0.12.3",
+		"mongodb": "^6.17.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
