--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"jsdom": "^26.0.0",
 		"mdsvex": "^0.12.3",
 		"mongodb": "^6.17.0",
+		"mongoose": "^8.16.4",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
