feat: add mongoose middleware

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-MONGODB_URL=
 DATABASE_URL=
+INIT_ADMIN_PASSWORD=
+INIT_ADMIN_USERNAME=
+MONGODB_URL=
 UPS_ACCESSLICENSE_NUMBER=
 UPS_CLIENT_ID=
 UPS_CLIENT_SECRET=
