--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"vitest": "^3.2.3",
+		"xlsx": "^0.18.5",
 		"zipcodes": "^8.0.0"
 	},
 	"dependencies": {
