--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
 		"@types/bcrypt": "^5.0.2",
+		"@types/nearest-color": "^0.4.1",
 		"@types/node": "^20",
 		"@types/zipcodes": "^8.0.5",
 		"bcryptjs": "^3.0.2",
+		"color-name-list": "^11.24.0",
+		"colorizr": "^3.0.8",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -43,6 +46,7 @@
 		"mdsvex": "^0.12.3",
 		"mongodb": "^6.17.0",
 		"mongoose": "^8.16.4",
+		"nearest-color": "^0.4.4",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
