--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
+		"@bwip-js/browser": "^4.7.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@friendofsvelte/state": "^0.0.6-ts",
@@ -31,22 +32,30 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
 		"@types/bcrypt": "^5.0.2",
+		"@types/jsdom": "^27.0.0",
 		"@types/nearest-color": "^0.4.1",
 		"@types/node": "^20",
+		"@types/pdfkit": "^0.17.3",
+		"@types/svg-to-pdfkit": "^0.1.3",
 		"@types/zipcodes": "^8.0.5",
 		"bcryptjs": "^3.0.2",
+		"bwip-js": "^4.7.0",
 		"color-name-list": "^11.24.0",
 		"colorizr": "^3.0.8",
+		"dompurify": "^3.3.0",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
-		"jsdom": "^26.0.0",
+		"jsdom": "^26.1.0",
+		"jszip": "^3.10.1",
+		"marked": "^16.4.1",
 		"mdsvex": "^0.12.3",
 		"mongodb": "^6.17.0",
 		"mongoose": "^8.16.4",
 		"nearest-color": "^0.4.4",
+		"pdfkit": "^0.17.2",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -54,6 +63,7 @@
 		"states-us": "^1.1.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svg-to-pdfkit": "^0.1.8",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
