feat: incremental commit

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DATABASE_URL=
 INIT_ADMIN_PASSWORD=
 INIT_ADMIN_USERNAME=
+MONGODB_DB=
 MONGODB_URL=
 UPS_ACCESSLICENSE_NUMBER=
 UPS_CLIENT_ID=
@@ -9,3 +10,6 @@ UPS_PASSWORD=
 UPS_TRANSACTIONSRC=
 UPS_TRANSID=
 UPS_USERNAME=
+VAPID_PRIVATE_KEY=
+VAPID_PUBLIC_KEY=
+VAPID_SUBJECT=
