--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"vitest": "^3.2.3",
+		"web-push": "^3.6.7",
 		"xlsx": "^0.18.5",
 		"zipcodes": "^8.0.0"
 	},
